# pdns-remote

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs  monitor.rs  pdns.rs  server.rs  state.rs
src/pdns/: mod.rs  query.rs  reply.rs
test/pdns/: docker-compose.yml
test/pdns/etc/powerdns/pdns.d/: backend.conf  pdns.conf-dist  ttl.conf
tests/: lib.rs  socket_io.rs
tests/_setup/: mod.rs
