[package]
name = "pdns-remote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10.1" }
log = { version = "0.4.20" }
tokio = { version = "1.35.1", features = ["io-util", "net"] }
